# ai-voice-kb-realtime-monitoring

./: .env.example  .gitignore  AI_Engineer_Assessment_Plan.md  README.md  agent.md  pyproject.toml  requirements.txt
adk_app/: __init__.py  root_agent.py
adk_app/agents/: __init__.py  indonesia_voice_agent.py  loan_qualification_agent.py  philippines_voice_agent.py  realtime_nudge_agent.py
adk_app/callbacks/: __init__.py  citation_guard.py  latency_logger.py  safety_fallback.py
adk_app/tools/: __init__.py  crm_mock.py  detect_signals.py  emit_nudge.py  escalate.py  qualify_lead.py  retrieve_kb.py
docs/: adk_stack.md  architecture.md  limitations.md  production_improvements.md
evidence/: latency_report.md
evidence/logs/: .gitkeep  assessment_test_results.txt  latency.jsonl  replay_cooperative_1784403156.json  replay_frustration_call_1784364504.json  replay_frustration_call_1784365116.json  replay_noisy_call_1784364504.json  (+4 more)
kb_builder/: __init__.py  build_index.py  build_kb.py  chunk.py  clean.py  dedupe.py  ingest.py  normalize.py  pii.py
knowledge_base/: chunks.jsonl  records.jsonl  retrieval_report.md
realtime_nudges/: __init__.py  latency_report.py  stream_replay.py
tests/: test_chat_sessions.py  test_guardrails.py  test_indonesia.py  test_langchain_middleware.py  test_nudges.py  test_philippines.py  test_retrieval.py  test_stream_replay_web.py  test_web_app_pages.py
voice_configs/: q1_business_loan_agent.md  q3_indonesia_agent.md  q3_philippines_agent.md
web_app/: __init__.py  guardrail_middleware.py  langchain_middleware.py  main.py
(+32 files in other folders)
